--- a/block.css
+++ b/block.css
@@ -1,4 +1,6 @@
-﻿* {
+@import url(//db.onlinewebfonts.com/c/1e6ec96c95301fa73aa1d026f161a269?family=MarzoW00-Regular);
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 2;
