--- a/block.css
+++ b/block.css
@@ -2,8 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 2;
-    font-family: Marzo--Regular, Marzo, Courier New, Courier, monospace;
-}
+    font-family: Marzo--Regular, Marzo, Courier New, Courier, 
 
 body {
     background: url('./w1280-1800.jpg') no-repeat center top; 
