--- a/block.css
+++ b/block.css
@@ -39,7 +39,7 @@ h1 {
 .name {
     color: #ffffff;
     font-size: 85px;
-    margin: 0 auto;
+    margin: 1px auto;
     text-align: center;
     text-shadow: 1px 5px 10px -5px black;
 }
