--- a/block.css
+++ b/block.css
@@ -1,8 +1,11 @@
 @font-face {
-    font-family: Marzo; /* Гарнитура шрифта */
-    src: url(/font/marzo.woff/Marzo.woff2); /* Путь к файлу со шрифтом */  
-    src: url(/font/marzo.woff/Marzo.woff); /* Путь к файлу со шрифтом */
-   }
+    font-family: Marzo;
+    /* Гарнитура шрифта */
+    src: url(/font/marzo.woff/Marzo.woff2);
+    /* Путь к файлу со шрифтом */
+    src: url(/font/marzo.woff/Marzo.woff);
+    /* Путь к файлу со шрифтом */
+}
 
 * {
     box-sizing: border-box;
@@ -12,7 +15,7 @@
 }
 
 body {
-    background: url('./w1280-1800.jpg') no-repeat center top; 
+    background: url('./w1280-1800.jpg') no-repeat center top;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -48,6 +51,11 @@ h1 {
 }
 
 .white-block {
+    padding: 2px;
+    background: rgba(65, 66, 66, 0.9);
+}
+
+.gray-block {
     padding: 2px;
     background: rgba(65, 66, 66, 0.9);
 }
@@ -266,7 +274,7 @@ h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.kdb h2,
+h2,
 .kdb p {
     margin: 0 auto;
     text-align: right;
@@ -288,6 +296,7 @@ h1 {
 
 .finish-left {
     background: rgba(163, 167, 170, 0.02);
+    font-family: Arial, Cambria, Cochin, Georgia, serif;
     text-align: left;
     font-size: 1.2rem;
     padding: 5px;
@@ -299,13 +308,6 @@ h1 {
     text-align: right;
     font-size: 1.2rem;
     padding: 5px;
-}
-
-a:link { 
-    color: beige
-}
-a:visited {
-    color:DarkRed
 }
 
 @media screen and (max-width:800px) {
