--- a/block.css
+++ b/block.css
@@ -310,6 +310,19 @@ h2,
     padding: 5px;
 }
 
+@media screen and (max-width:1024px) {
+    .name {
+        font-size: 3.2rem;
+    }
+    h1 {
+        font-size: 1.1rem;
+        letter-spacing: 0.5rem;
+    }
+    .kdb {
+        font-size: 20px;
+    }
+}
+
 @media screen and (max-width:800px) {
     .name {
         font-size: 3.2rem;
