--- a/block.css
+++ b/block.css
@@ -198,6 +198,19 @@ h1 {
     font-size: 18px;
 }
 
+@media screen and (max-width:1024px) {
+    .name {
+        font-size: 3.2rem;
+    }
+    h1 {
+        font-size: 1.1rem;
+        letter-spacing: 0.5rem;
+    }
+    .kdb {
+        font-size: 20px;
+    }
+}
+
 @media all and (max-width: 800px) {
     .dws-menu {
         overflow: hidden;
