--- a/block.css
+++ b/block.css
@@ -335,7 +335,8 @@ h2,
         font-size: 20px;
     }
     .coach .photo {
-     width: 30%;
+     width: 25%;
+    }
 }
 
 @media screen and (max-width:800px) {
@@ -350,7 +351,7 @@ h2,
         font-size: 20px;
     }
     .coach .photo {
-        margin: 0px 6px 6px 0px;
+     width: 30%;
     }
 }
 
