--- a/block.css
+++ b/block.css
@@ -335,7 +335,7 @@ h2,
         font-size: 20px;
     }
     .coach .photo {
-     width: 20%;
+    height: 280px;
     }
 }
 
@@ -351,7 +351,7 @@ h2,
         font-size: 20px;
     }
     .coach .photo {
-     width: 25%;
+    
     }
 }
 
