--- a/block.css
+++ b/block.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    background: url('./1280-1800.jpg') no-repeat center top;
+    background: url('./w1280-1800.jpg') no-repeat center top;
     background-size: cover;
     background-attachment: fixed;
 }
