--- a/block.css
+++ b/block.css
@@ -321,7 +321,10 @@ h2,
     .kdb {
         font-size: 20px;
     }
-   
+     .coach .photo {
+        height: 450px;
+        width: auto;    
+    }   
 }
 
 @media screen and (max-width:1024px) {
