--- a/block.css
+++ b/block.css
@@ -291,7 +291,7 @@ h2,
 .kdb p {
     height: auto;
     margin: 0 auto;
-    text-align: right;
+    text-align: center;
     padding: 5px 10px;
     text-shadow: 1px 15px 10px 15px black;
     font-family: Arial, Cambria, Cochin, Georgia, serif;
