--- a/block.css
+++ b/block.css
@@ -435,6 +435,18 @@ h2,
     .zal {
         flex-direction: column;
     }
+    .zal {
+        flex-direction: column;
+    }
+    .viber {
+        max-width: 12%;
+    }
+    .whatsapp {
+        max-width: 12%;
+    }
+    .tel {
+        max-width: 12%;
+    }
 }
 
 @media screen and (max-width:330px) {
@@ -462,6 +474,18 @@ h2,
     }
     .zal {
         flex-direction: column;
+    }
+    .zal {
+        flex-direction: column;
+    }
+    .viber {
+        max-width: 20%;
+    }
+    .whatsapp {
+        max-width: 20%;
+    }
+    .tel {
+        max-width: 20%;
     }
 }
 
