--- a/block.css
+++ b/block.css
@@ -343,6 +343,13 @@ h2,
     height: auto;
 }
 
+@media screen and (min-width:1366px) {
+    #footer {
+        position: absolute;
+        bottom: 0;
+    }
+}
+
 @media screen and (min-width:1024px) {
     .name {
         font-size: 3.2rem;
@@ -358,10 +365,6 @@ h2,
         height: 450px;
         width: auto;    
     }   
-    #footer {
-        position: absolute;
-        bottom: 0;
-    }
 }
 
 @media screen and (max-width:1024px) {
