--- a/block.css
+++ b/block.css
@@ -319,8 +319,8 @@ h2,
 }
 
 #footer {
-    max-width: 100%;
-    height: auto;
+    padding: 2px;
+    background: rgba(65, 66, 66, 0.9);
     padding-top: 20px;
     padding-bottom: 20px;
     background: rgba(10, 10, 10, 0.95);
