--- a/block.css
+++ b/block.css
@@ -319,7 +319,7 @@ h2,
 }
 
 #footer {
-    padding: 2px;
+    padding: none;
     background: rgba(65, 66, 66, 0.9);
     padding-top: 20px;
     padding-bottom: 20px;
