--- a/block.css
+++ b/block.css
@@ -319,7 +319,7 @@ h2,
 }
 
 #footer {
-    
+    padding: 0;
     padding-top: 20px;
     padding-bottom: 20px;
     background: rgba(10, 10, 10, 0.95);
