--- a/block.css
+++ b/block.css
@@ -318,6 +318,20 @@ h2,
     margin: 5%;
 }
 
+.vidcontainer {
+position: relative;
+width: 100%;
+height: 0;
+padding-bottom: 56.25%;
+}
+.vidY {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
 #footer {
         width: 100%;
     height: auto;
