--- a/block.css
+++ b/block.css
@@ -318,6 +318,21 @@ h2,
     margin: 5%;
 }
 
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 #footer {
         width: 100%;
     height: auto;
