--- a/block.css
+++ b/block.css
@@ -290,6 +290,27 @@ h4 {
     justify-content: center;
 }
 
+.photo-I_1 {
+    max-width: 28%;
+    margin: 1%;
+    height: auto;
+    justify-content: center;
+}
+
+.photo-I_2 {
+    max-width: 28%;
+    margin: 1%;
+    height: auto;
+    justify-content: center;
+}
+
+.photo-I_3 {
+    max-width: 28%;
+    margin: 1%;
+    height: auto;
+    justify-content: center;
+}
+
 .coach .description {
     background: rgba(163, 167, 170, 0.0);
     padding: 3px;
