--- a/block.css
+++ b/block.css
@@ -322,12 +322,14 @@ h4 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+h1,
 h2,
+h3,
 .kdb p {
     height: auto;
     margin: 0 auto;
     text-align: left;
-    padding: 5px 10px;
+    padding: 5px 20px;
     text-shadow: 1px 15px 10px 15px black;
     font-family: Arial, Cambria, Cochin, Georgia, serif;
 }
