--- a/block.css
+++ b/block.css
@@ -361,7 +361,7 @@
         height: auto;
         display: block;
         float: right;
-        margin: 0px 5px 5px 0px;
+        padding: 8px;
     }
     
     .video-container {
