--- a/block.css
+++ b/block.css
@@ -397,26 +397,47 @@
         width: 48%;
     }
     
-    .viber {
-        border-radius: 50%;
-        max-width: 8%;
-        margin-right: 1%;
-        height: auto;
-    }
-    
-    .whatsapp {
-        border-radius: 50%;
-        max-width: 8%;
-        margin-right: 1%;
-        height: auto;
-    }
-    
+      
     .tel {
         border-radius: 50%;
         max-width: 8%;
         margin-right: 1%;
         height: auto;
     }
+
+footer {
+    text-align: center;
+}
+
+.black-block {
+    margin-top: 10px;
+    max-width: 100%;
+    height: auto;
+    padding: 1em;
+    background-color: rgb(77, 102, 117);
+    box-shadow: 2px 5px 10px 1px #c0c0c0;
+}
+
+footer a {
+    color: #FFFFFF;
+    margin: 1px;
+    text-decoration: none;
+    a: hover;
+}
+
+.tel {
+    border-radius: 50%;
+    max-width: 4em;
+    margin: 0.5em;
+    height: auto;
+}
+
+.number {
+    font-size: 1.5em;
+    color: #FFFFFF;
+    margin: 0.5em;
+}
+
     
     @media screen and (min-width:1024px) {
         .name {
