--- a/block.css
+++ b/block.css
@@ -414,7 +414,7 @@ footer {
     max-width: 100%;
     height: auto;
     padding: 1em;
-    background-color: rgb(77, 102, 117);
+    background-color: #151414;
     box-shadow: 2px 5px 10px 1px #c0c0c0;
 }
 
