--- a/block.css
+++ b/block.css
@@ -426,6 +426,7 @@ footer a {
     max-width: 4em;
     margin: 0.5em;
     height: auto;
+    font-family: Arial, Cambria, Cochin, Georgia, serif;
 }
 
 .number {
