--- a/block.css
+++ b/block.css
@@ -387,6 +387,7 @@
         overflow: hidden;
         justify-content: center;
         text-align: center;
+        font-family: Cuprum, Arial, Helvetica, sans-serif;
     }
     
     .icons {
@@ -425,7 +426,7 @@ footer a {
     max-width: 4em;
     margin: 0.5em;
     height: auto;
-    font-family: Arial, Cambria, Cochin, Georgia, serif;
+    font-family: Cuprum, Arial, Helvetica, sans-serif;
 }
 
 .number {
@@ -517,18 +518,6 @@ footer a {
             max-width: 99%;
             margin: 1%
         }
-        .viber {
-            max-width: 25%;
-            margin-right: 3%;
-        }
-        .whatsapp {
-            max-width: 25%;
-            margin-right: 3%;
-        }
-        .tel {
-            max-width: 25%;
-            margin-right: 3%;
-        }
     }
     
     @media screen and (max-width:500px) {
@@ -566,18 +555,6 @@ footer a {
         .zal {
             flex-direction: column;
         }
-        .viber {
-            max-width: 25%;
-            margin-right: 5%;
-        }
-        .whatsapp {
-            max-width: 25%;
-            margin-right: 5%;
-        }
-        .tel {
-            max-width: 25%;
-            margin-right: 5%;
-        }
     }
     
     @media screen and (max-width:330px) {
@@ -614,17 +591,5 @@ footer a {
         }
         .zal {
             flex-direction: column;
-        }
-        .viber {
-            max-width: 28%;
-            margin-right: 1%;
-        }
-        .whatsapp {
-            max-width: 28%;
-            margin-right: 1%;
-        }
-        .tel {
-            max-width: 28%;
-            margin-right: 1%;
         }
     }
