--- a/block.css
+++ b/block.css
@@ -35,7 +35,7 @@
     }
     
     h4 {
-        color: goldenrod;
+        color: #000000;
         margin: 4px;
         text-align: center;
         text-shadow: 1px 5px 10px -5px black;
