--- a/block.css
+++ b/block.css
@@ -35,7 +35,7 @@
     }
     
     h4 {
-        color: #000000;
+        color: #FFFFFF;
         margin: 4px;
         text-align: center;
         text-shadow: 1px 5px 10px -5px black;
@@ -56,7 +56,7 @@
     
     .white-block {
         padding: 2px;
-        background: rgba(65, 66, 66, 0.9);
+        background: #000000;
     }
     
     .gray-block {
