--- a/block.css
+++ b/block.css
@@ -61,7 +61,7 @@
     
     .gray-block {
         padding: 2px;
-        background: rgba(65, 66, 66, 0.9);
+        background: #000000;
     }
     
     .dws-menu * {
