--- a/block.css
+++ b/block.css
@@ -56,7 +56,7 @@
     
     .white-block {
         padding: 2px;
-        background: #000000;
+        background: #2e2e2e;
     }
     
     .gray-block {
