--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,7 @@ h1 {
     padding-bottom: 56.25%;
 }
 
-.video-container embed {
+.video-container. embed {
     position: absolute;
     top: 0;
     left: 0;
