--- a/style.css
+++ b/style.css
@@ -249,6 +249,10 @@ h4 {
 #content {
     padding: 40px;
 }
+.choose_coach {
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
 .coach .photo {
     max-width: 98%;
