--- a/style.css
+++ b/style.css
@@ -247,11 +247,11 @@ h4 {
 }
 
 #content {
-    padding: 30px;
+    padding: 20px;
 }
 .choose_coach {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .coach .photo {
@@ -330,7 +330,7 @@ h1 {
 
 .box-container {
     margin: 0;
-    padding: 5px;
+    padding: 5px 15px;
     background-color: #FFFFFF;
     box-shadow: 1px 8px 10px 5px #454547;
 }
