--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ h1 {
 
 .box-container {
     margin: 0;
-    padding: 5px 25px;
+    padding: 10px 35px 10px 25px;
     background-color: #FFFFFF;
     box-shadow: 1px 8px 10px 5px #454547;
 }
