--- a/powerboat/css/style.css
+++ b/powerboat/css/style.css
@@ -325,13 +325,9 @@ h1 {
 }
 
 .advantages{
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    height: 100%;
-    font-size: 24px;
+    font-size: 14px;
     text-align: center;
-    padding: 2em;
+    padding: 1em;
 }
 
 .welcome{
@@ -434,4 +430,12 @@ footer a {
         grid-gap: 1em;
         padding: 2em;
     }
-    }
+    .advantages{
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        height: 100%;
+        font-size: 24px;
+        padding: 2em;
+    }    
+}
