--- a/powerboat/css/style.css
+++ b/powerboat/css/style.css
@@ -325,9 +325,10 @@ h1 {
 }
 
 .advantages{
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
     padding: 1em;
+    margin: 1rem;
 }
 
 .welcome{
