--- a/powerboat/css/style.css
+++ b/powerboat/css/style.css
@@ -355,9 +355,7 @@ h1 {
 }
 
 .photo_right {
-    max-width: 45%;
-    display: inline-block;
-    float: left;
+    max-width: 100%;
     padding: 1em;
 }
 
@@ -440,3 +438,14 @@ footer a {
         padding: 2em;
     }    
 }
+
+@media screen and (min-width: 550px){
+    .photo_right {
+        max-width: 45%;
+        display: inline-block;
+        float: left;
+        padding: 1em;
+    }
+}
+
+
