--- a/powerboat/css/style.css
+++ b/powerboat/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url("../img/concrete-texture.png");
+    background-color: FFFFFF;
 }
 
 .wrapper {
@@ -386,7 +386,7 @@ footer {
     margin-top: 10px;
     max-width: 100%;
     padding: 1em;
-    background-color: rgb(77, 102, 117);
+    background-color: rgb(89, 116, 133);
     box-shadow: 2px 5px 10px 1px #c0c0c0;
 }
 
