--- a/sport-blog/style.css
+++ b/sport-blog/style.css
@@ -605,6 +605,9 @@ footer a {
     .zal {
         flex-direction: column;
     }
+    .wrapper {
+        padding: 0 10px;
+    }    
 }
 
 @media screen and (max-width:330px) {
