--- a/sport-blog/style.css
+++ b/sport-blog/style.css
@@ -391,7 +391,7 @@ h1 {
 .DumbbellsIcon {
     list-style-image: url(icons/dumbbell50px.png);
     padding: 10px;
-    margin: 20px;
+    margin: 50px 20px 20px;
     line-height: 2rem;
 }
 
