--- a/sport-blog/style.css
+++ b/sport-blog/style.css
@@ -459,6 +459,12 @@ textarea {
     transition: .3s ease;
 }
 
+.place_for_training {
+    display: block;
+    float: right;
+    padding: 10px;
+}
+
 #footer {
     width: 100%;
     background: #2e2e2e;
