--- a/sport-blog/style.css
+++ b/sport-blog/style.css
@@ -459,9 +459,10 @@ textarea {
     transition: .3s ease;
 }
 
-.place_for_training {
+.place-for-training {
     display: block;
     max-height: 250px;
+    width: 100%;
     float: right;
     padding: 10px;
 }
