--- a/sport-blog/style.css
+++ b/sport-blog/style.css
@@ -460,7 +460,7 @@ textarea {
 }
 
 .place-for-training {
-    display: block;
+    display: flex;;
     max-height: 250px;
     width: 100%;
     float: right;
