--- a/sport-blog/style.css
+++ b/sport-blog/style.css
@@ -460,9 +460,8 @@ textarea {
 }
 
 .place-for-training {
-    display: inline-block;
+    display: block;
     max-height: 450px;
-    width: 100%;
     float: right;
     padding: 10px;
 }
