--- a/sport-blog/style.css
+++ b/sport-blog/style.css
@@ -460,8 +460,8 @@ textarea {
 }
 
 .place-for-training {
-    display: flex;
     max-height: 450px;
+    width: 100%;
     float: right;
     padding: 10px;
 }
