--- a/sport-blog/style.css
+++ b/sport-blog/style.css
@@ -33,6 +33,9 @@ ul {
     font-family: Marzo-Regular, Marzo, Courier New, Courier, monospace;
 }
 
+.wrapper {
+    padding: 0 120px;
+}
 
 h4 {
     color: #FFFFFF;
@@ -369,7 +372,7 @@ h1 {
 .photo-coach {
     float: left;
     max-width: 35%;
-    min-width: 350px;
+    min-width: 300px;
     padding: 1em;
 }
 
@@ -681,8 +684,5 @@ footer a {
     }
     .zal {
         flex-direction: column;
-    }
-    .photo-coach {
-        max-width: 90%;
     }
 }
